traversal.snake.Snake.scala.error
Compilation error:
Snake:38: error: not found: value fini
  while(fini == false){
        ^Snake:40: error: not found: value murN
    if(estFaceMur==true && murN==true){
                           ^Snake:52: error: type mismatch;
 found   : Unit
 required: Boolean
      droite()
            ^Snake:56: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^Snake:58: error: type mismatch;
 found   : Unit
 required: Boolean
      return
      ^Snake:38: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  while(fini == false){
                      ^